<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>SmartCity-Market</groupId>
  <artifactId>SmartCity-Market</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>pom</packaging>
  <build>
  	<pluginManagement>
  		<plugins>
  			<plugin>
  				<groupId>org.apache.maven.plugins</groupId>
  				<artifactId>maven-compiler-plugin</artifactId>
  				<version>3.6.0</version>	
  				<configuration>
  					<source>1.8</source>
  					<target>1.8</target>
  				</configuration>  				
  			</plugin>
  			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.7.7.201606060606</version>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>cobertura-maven-plugin</artifactId>
				<version>2.7</version>
				<configuration>
					<quiet>true</quiet>
					<formats>
						<format>html</format>
						<format>xml</format>
					</formats>
					<check/>
				</configuration>
			</plugin>
  		</plugins>
  	</pluginManagement>
  </build>
<reporting>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jxr-plugin</artifactId>
        <version>2.5</version>
      </plugin>
    </plugins>
</reporting>
  <modules>
  	<module>Server</module>
  	<module>Common</module>
  	<module>Customer</module>
  	<module>Employee</module>
    <module>Sales</module>
  </modules>
  <dependencies>
  	<dependency>
  		<groupId>junit</groupId>
  		<artifactId>junit</artifactId>
  		<version>4.12</version>
  		<scope>test</scope>
  	</dependency>
  	<dependency>
  		<groupId>com.google.code.gson</groupId>
  		<artifactId>gson</artifactId>
  		<version>2.8.0</version>
  	</dependency>
  	<dependency>
  		<groupId>joda-time</groupId>
  		<artifactId>joda-time</artifactId>
  		<version>2.9.6</version>
  	</dependency>
  	<dependency>
  		<groupId>org.mockito</groupId>
  		<artifactId>mockito-all</artifactId>
  		<version>2.0.2-beta</version>
  		<scope>test</scope>
  	</dependency>
  	<dependency>
	    <groupId>com.google.inject</groupId>
	    <artifactId>guice</artifactId>
	    <version>4.1.0</version>
    </dependency>
	<dependency>
  		<groupId>commons-cli</groupId>
  		<artifactId>commons-cli</artifactId>
  		<version>1.3.1</version>
  	</dependency>
	<dependency>
		<groupId>log4j</groupId>
		<artifactId>log4j</artifactId>
		<version>1.2.17</version>
	</dependency>
	<dependency>
      <groupId>org.controlsfx</groupId>
      <artifactId>controlsfx</artifactId>
      <version>8.40.11</version>
  	</dependency>  

<dependency>
    <groupId>org.controlsfx</groupId>
    <artifactId>openjfx-dialogs</artifactId>
    <version>1.0.3</version>
</dependency>
  	
<dependency>
    <groupId>com.jfoenix</groupId>
    <artifactId>jfoenix</artifactId>
    <version>1.3.0</version>
</dependency>

  <dependency>
    <groupId>de.jensd</groupId>
    <artifactId>fontawesomefx</artifactId>
    <version>8.9</version>
</dependency>

<dependency>
    <groupId>org.javafxdata</groupId>
    <artifactId>datafx-core</artifactId>
    <version>8.0b5</version>
</dependency>

<dependency>
    <groupId>io.datafx</groupId>
    <artifactId>flow</artifactId>
    <version>8.0.1</version>
</dependency>
	  
<dependency>
 	<groupId>org.apache.maven.plugins</groupId>
 	<artifactId>maven-surefire-report-plugin</artifactId>
  	<version>2.20</version>
  	<type>maven-plugin</type>
</dependency>

  </dependencies>
  <properties>
  	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
</project>
